fix navbar behind scroll bar

--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -52,6 +52,7 @@
   left: 0;
   transform: 0;
   position: fixed;
+  overflow-y: scroll;
 }
 
 .sticky .logo,
